network selector styles. mobile styles stop gap

--- a/web/src/styles/connect-evm-wallet-button.scss
+++ b/web/src/styles/connect-evm-wallet-button.scss
@@ -15,7 +15,7 @@
   }
 }
 
-.connect-wallet-dropdown {
+.connect-wallet {
   position: static;
   display: inline-block;
   overflow: visible;
